# dynamic_prompt_nodes

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  __init__.py  pyproject.toml
docs/plans/: 2026-03-12-decouple-from-dynamicprompts.md
dynamic_prompt_nodes/: __init__.py
dynamic_prompt_nodes/nodes/: __init__.py  combinatorial_prompt.py  jinja_prompt.py  random_prompt.py
src/: wildcards.py
src/evaluator/: combinatorial_eval.py  conditions.py  context.py  cyclical_eval.py  model_family.py  random_eval.py
src/nodes/: __init__.py  cleanup.py  combinatorial_prompt.py  cyclical_prompt.py  jinja_prompt.py  prompt_with_wildcards.py  random_prompt.py
src/parser/: ast_nodes.py  grammar.lark  parser.py
tests/: conftest.py  test_cleanup.py  test_combinatorial_prompt.py  test_cyclical_prompt.py  test_jinja_prompt.py  test_prompt_with_wildcards.py  test_random_prompt.py  test_wildcards.py
tests/evaluator/: test_combinatorial_eval.py  test_cyclical_eval.py  test_ppp_tags.py  test_random_eval.py
tests/parser/: test_parser.py  test_ppp_parser.py
web/: wildcards.js
wildcards/: example.yaml
