[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_prompt_nodes"
version = "0.0.1"
description = "Dynamic prompt nodes to fully support wildcards"
authors = [
  {name = "cesasol", email = "cesasol@pm.me"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "dynamicprompts>=0.31.0",
]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/cesasol/dynamic_prompt_nodes"
BugTracker = "https://github.com/cesasol/dynamic_prompt_nodes/issues"
Documentation = "https://github.com/cesasol/dynamic_prompt_nodes/wiki"


[tool.comfy]
PublisherId = "cesasol"
DisplayName = "Dynamic Prompt Nodes"
Icon = ""
Tags = []
Repository = "https://github.com/cesasol/dynamic_prompt_nodes"
includes = ["js"]

[tool.setuptools.packages.find]
include = ["dynamic_prompt_nodes*"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
